java 17 switch and ListOf changes